projects section. trialed placing icons to replace link texts on cards. Realized footer text was covered in mobile mode. fixed.

--- a/style.css
+++ b/style.css
@@ -113,9 +113,15 @@ font-family: 'Libre Franklin', sans-serif;
 .btn-primary{
     background-color:rgb(255, 193, 100);
     border-color:rgb(255, 193, 100);
+    
 }
 
 .btn-primary:hover {
     background-color:rgb(255, 154, 100);
     border-color:rgb(255, 154, 100);
+    
+}
+
+.icon{
+    height:60px;
 }
